[package]
name = "geist_amm"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "geist_amm"

[features]
no-entrypoint = []
no-idl = []
custom-heap = []
default = ["custom-heap"]
no-log-ix-name = []
cpi = ["no-entrypoint"]

[dependencies]
anchor-lang = { version = "0.30.0", features = [ "init-if-needed" ] }
anchor-spl = "0.30.0"
borsh = "1.5.1"
light-compressed-token = { version = "1.2.0", features = ["cpi"] }
blake3 = { version = "1.5.1", features = ["pure"] }
light-sdk = "0.10.0"
light-utils = "1.1.0"
uint = "0.9.5"
